# isco

./: .cvsignore  .todo  COPYRIGHT  Makefile.in  QUEUE  RELEASE  TODO  config.status  configure  configure.in
debian/: .cvsignore  changelog  control  copyright  dhelp  dirs  dwww-index  manpage  postinst  postrm  prerm  rules
doc/: .cvsignore  back-ends.tex  examples.tex  front-ends.tex  index.tex  intro.tex  language.tex  macros.tex  manual.tex
src/: .cvsignore  Makefile.in  apt.pl  cmdline.pl  copyright.pl  ctype.pl  empty-classes.pl  isco_lib_dir.pl  ops.pl  parser.pl  pseudo-runtime.pl  revision.pl.in  symtab.pl  top-level.pl
src/back-end/: code-gen-directives.pl  code-gen-schema.pl  code-gen-sql.pl  inherit.pl  prolog-pg.pl  prolog-pg6.pl  prolog-pg6class.pl  prolog-pg7.pl  prolog-sql.pl  prolog.pl  sql-build.pl  sql-schema.pl  sql.pl
src/back-end/code/: computed.pl  pg6.pl  pg6class.pl  pg7.pl  sql.pl
src/runtime/: backend-odbc.pl  backend-pg.pl  backend.pl  cache.pl  runtime.pl  transaction.pl
util/schema-parser/: .cvsignore  Main.java  Makefile  Makefile.in  Parser.cup  Scanner.lex  sql2isco.sh  stack-to-isco.pl
util/scripts/: .cvsignore  Makefile  Makefile.in  isco.in  isco.sh  isco.sh.in
